# sound_monitor

./: .gitignore  .mise.toml  .pylintrc  license.md  pre-install.sh  pyproject.toml  readme.md
scripts/: download-yamnet.sh  install-sys-deps.sh  pre-install.sh  util.sh
sound_monitor/: config.py  main.py
sound_monitor/audio/: audio.py  block.py  direction.py  input.py  peak.py  record.py  rms.py  util.py  yamnet.py
sound_monitor/util/: mail.py
sound_monitor/util/types/: lifecycle.py  singleton.py
